cambiando indentacion de 4 espacios a 2

--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,12 @@
 
 h1{
 	text-align: center;
-    color: cadetblue;
+    color: #6c5fa0;
     font-family: monospace;
 }
 b{
 	font-family: arial;
-	color: cadetblue;
+	color: #6c5fa0;
 }
 
 .img{
